# CodeSuite-Console-Analysis

./: .gitignore  2-pager idea.docx  README.md  pyproject.toml  requirements.txt  run-demo.sh
.kiro/specs/codesuite-diagnostics-demo/: .config.kiro  design.md  requirements.md  tasks.md
backend/: agent.py  app.py  config.py  mcp_client.py  models.py  prompts.py  requirements.txt  routes.py
demo-ui/: index.html  package-lock.json  package.json  tailwind.config.js
demo-ui/src/: App.tsx  index.css
demo-ui/src/api/: client.ts
demo-ui/src/components/: AnalysisPanel.tsx  BuildProjectList.tsx  DeploymentList.tsx  Layout.tsx  PipelineDetail.tsx  PipelineList.tsx  StageVisualization.tsx
demo-ui/src/styles/: aws-console.css
demo-ui/src/types/: index.ts
docs/: talking-points.md
infrastructure/: .gitignore  README.md  app.py  cdk.context.json  cdk.json  requirements.txt
infrastructure/seed_data/scenario1/: README.md  index.html
infrastructure/seed_data/scenario1/scripts/: app.js
infrastructure/seed_data/scenario2/: buildspec.yml  index.html
infrastructure/seed_data/scenario2/scripts/: install_dependencies.sh
infrastructure/seed_data/scenario3/: accounts-config.yaml  buildspec.yml  validate_ou_names.py
infrastructure/stacks/: __init__.py  scenario1_stack.py  scenario2_stack.py  scenario3_stack.py  shared_stack.py
mcp-servers/codecommit/: handlers.py  server.py
mcp-servers/codepipeline/: handlers.py  server.py
tests/: __init__.py  test_codecommit_handlers.py  test_codepipeline_handlers.py  test_e2e_scenarios.py
